--- a/index.css
+++ b/index.css
@@ -1,24 +1,19 @@
 * {
   box-sizing: border-box;
+  font-family: sans-serif;
 }
 
 body {
   background-image: url(images/compet_esport.jpg);
   background-repeat: none;
   background-size: cover;
-}
-
-#header {
-  background-color: lightblue;
-  border: 1px solid black;
-  padding: 15px 10px;
-  height: 100px;
+  z-index: 3;
 }
 
 #nav-image {
-  height: 60px;
-  position: inherit;
-  bottom: 30px;
+  height: 70px;
+  position: relative;
+  bottom: 20px;
   border: 1px solid black;
 }
 
@@ -44,4 +39,53 @@ body {
 
 .nav-link:hover {
   color: blue;
+}
+
+#intro-heading {
+  background-color: rgba(240, 240, 240, 0.5);
+  width: 50%;
+  margin: 0 auto;
+}
+
+#intro {
+  z-index: 1;
+  color: black;
+  margin: 60px auto;
+  width: 100%;
+  font-size: 70px;
+  text-align: center;
+}
+
+#main-section {
+  position: fixed;
+  top: 100px;
+}
+
+#date {
+  margin: 0 auto;
+  width: 100%;
+  text-align: center;
+  padding-bottom: 10px;
+  font-size: 25px;
+}
+
+#header {
+  background-color: lightblue;
+  border: 1px solid black;
+  padding: 15px 10px;
+  height: 100px;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
+
+#footer-section {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: lightblue;
+  color: black;
+  text-align: center;
 }
