--- a/index.css
+++ b/index.css
@@ -3,9 +3,9 @@
   font-family: sans-serif;
 }
 
-#nav-image {
+#site-image {
   height: 70px;
-  position: relative;
+  margin-right: 20px;
   bottom: 20px;
   border: 1px solid black;
 }
@@ -34,9 +34,8 @@
   color: blue;
 }
 
-#header {
+#nav-header {
   background-color: lightblue;
-  border: 1px solid black;
   padding: 15px 10px;
   height: 100px;
   width: 100%;
